-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15, 16
-
Component/s: hotspot
-
b07
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8251902 | 15.0.2 | Christian Hagedorn | P4 | Resolved | Fixed | b01 |
| JDK-8251961 | 15.0.1 | Christian Hagedorn | P4 | Resolved | Fixed | b06 |
Run this:
$ CONF=linux-x86_64-server-fastdebug make images run-test TEST=compiler/intrinsics/object/TestClone.java TEST_VM_OPTS="-XX:+VerifyGraphEdges"
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/opto/node.cpp:2140), pid=645700, tid=645714
# assert(i >= req() || i == 0 || is_Region() || is_Phi() || is_ArrayCopy() || (is_Unlock() && i == req()-1)) failed: only region, phi, arraycopy or unlock nodes have null data edges
#
# JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x13b1eb8] Node::verify_edges(Unique_Node_List&)+0x2c8
#
Current CompileTask:
C2: 438 18 !b compiler.intrinsics.object.TestClone::test2 (17 bytes)
Stack: [0x00007f567195c000,0x00007f5671a5d000], sp=0x00007f5671a58390, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x13b1eb8] Node::verify_edges(Unique_Node_List&)+0x2c8
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x91fc51] Compile::verify_graph_edges(bool) [clone .part.0]+0x181
V [libjvm.so+0x14b20ef] PhaseIterGVN::verify_PhaseIterGVN()+0x19f
V [libjvm.so+0x12096ae] PhaseMacroExpand::expand_macro_nodes()+0x123e
V [libjvm.so+0x93af59] Compile::Optimize()+0xf99
V [libjvm.so+0x93c7b6] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1506
V [libjvm.so+0x789310] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x170
V [libjvm.so+0x94a020] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc10
V [libjvm.so+0x94acf8] CompileBroker::compiler_thread_loop()+0x6c8
V [libjvm.so+0x1844ddc] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x184a9c4] Thread::call_run()+0x104
V [libjvm.so+0x142ffbe] thread_native_entry(Thread*)+0x11e
(I put a few affected-versions provisionally)
$ CONF=linux-x86_64-server-fastdebug make images run-test TEST=compiler/intrinsics/object/TestClone.java TEST_VM_OPTS="-XX:+VerifyGraphEdges"
# Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/opto/node.cpp:2140), pid=645700, tid=645714
# assert(i >= req() || i == 0 || is_Region() || is_Phi() || is_ArrayCopy() || (is_Unlock() && i == req()-1)) failed: only region, phi, arraycopy or unlock nodes have null data edges
#
# JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc.shade.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 16-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x13b1eb8] Node::verify_edges(Unique_Node_List&)+0x2c8
#
Current CompileTask:
C2: 438 18 !b compiler.intrinsics.object.TestClone::test2 (17 bytes)
Stack: [0x00007f567195c000,0x00007f5671a5d000], sp=0x00007f5671a58390, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x13b1eb8] Node::verify_edges(Unique_Node_List&)+0x2c8
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x13b20c5] Node::verify_edges(Unique_Node_List&)+0x4d5
V [libjvm.so+0x91fc51] Compile::verify_graph_edges(bool) [clone .part.0]+0x181
V [libjvm.so+0x14b20ef] PhaseIterGVN::verify_PhaseIterGVN()+0x19f
V [libjvm.so+0x12096ae] PhaseMacroExpand::expand_macro_nodes()+0x123e
V [libjvm.so+0x93af59] Compile::Optimize()+0xf99
V [libjvm.so+0x93c7b6] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1506
V [libjvm.so+0x789310] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x170
V [libjvm.so+0x94a020] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc10
V [libjvm.so+0x94acf8] CompileBroker::compiler_thread_loop()+0x6c8
V [libjvm.so+0x1844ddc] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x184a9c4] Thread::call_run()+0x104
V [libjvm.so+0x142ffbe] thread_native_entry(Thread*)+0x11e
(I put a few affected-versions provisionally)
- backported by
-
JDK-8251902 C2: compiler/intrinsics/object/TestClone fails with -XX:+VerifyGraphEdges
-
- Resolved
-
-
JDK-8251961 C2: compiler/intrinsics/object/TestClone fails with -XX:+VerifyGraphEdges
-
- Resolved
-
- relates to
-
JDK-8238811 C2: assert(i >= req() || i == 0 || is_Region() || is_Phi()) with -XX:+VerifyGraphEdges
-
- Resolved
-
-
JDK-8237581 Improve allocation expansion
-
- Resolved
-