8248467: C2: compiler/intrinsics/object/TestClone fails with -XX:+VerifyGraphEdges

Fix assert by taking MemBarNodes into account whose precedence edge can be NULL.

Reviewed-by: kvn, thartmann